fix overflow in shopofweek section

--- a/assets/css/shopofweek.css
+++ b/assets/css/shopofweek.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
 
+#shop-of-week {
+  overflow: hidden;
+}
+
 #shop-of-week .right {
   width: 500px;
 }
